--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,9 @@ name: Update IP List
 
 on:
   schedule:
-    - cron: '0 */6 * * *' # 每3小时运行一次
+    - cron: '0 */6 * * *' # 每6小时运行一次
   workflow_dispatch: # 允许手动触发
+  push: # 允许提交触发
 
 jobs:
 
@@ -24,21 +25,13 @@ jobs:
         pip install requests
         pip install beautifulsoup4
         
-    - name: Delete workflow runs
-      uses: Mattraks/delete-workflow-runs@v2
-      with:
-        token: ${{ github.token }}
-        repository: ${{ github.repository }}
-        retain_days: 2
-        keep_minimum_runs: 6
-        
     - name: Run script
       run: python ${{ github.workspace }}/collect_ips.py
         
     - name: Commit and push changes
       run: |
-        git config --local user.email "actions@github.com"
-        git config --local user.name "GitHub Action"
+        git config --global user.email "tianshideyou@proton.me"
+        git config --global user.name "tianshipapa"
         if [ -n "$(git status --porcelain)" ]; then
           git add ip.txt
           git commit -m "Automatic update"
